Fixing up banner on mobile and secondary pages, fixing deploy script.

--- a/htdocs/themes/MarylandCode2013/static/css/banner.css
+++ b/htdocs/themes/MarylandCode2013/static/css/banner.css
@@ -5,3 +5,25 @@
 	text-align: center;
 	font-weight: bold;
 }
+
+@media only screen and (min-width: 1025px) {
+	.inside header#page_header {
+	    height: 132px;
+	}
+}
+
+@media only screen and (max-device-width: 1024px) and (min-device-width: 768px), only screen and (max-width: 1024px) and (min-width: 768px) {
+	header#page_header {
+		height: 250px;
+	}
+}
+
+@media only screen and (max-device-width: 768px) and (min-device-width: 320px), only screen and (max-width: 768px) and (min-width: 320px) {
+	header#page_header nav#main_navigation {
+	    top: 215px;
+    }
+	section#search {
+		z-index: 100;
+		top: 247px;
+	}
+}
